--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -4,25 +4,22 @@
 name: Java CI with Maven
 
 # Run this workflow every time a new commit pushed to your repository
-on: push
+
+on:
+  push:
+    branches: [ feature_textareatool]
+  pull_request:
+    branches: [ feature_textareatool]
 
 jobs:
-  # Set the job key. The key is displayed as the job name
-  # when a job name is not provided
-  super-lint:
-    # Name the Job
-    name: Lint code base
-    # Set the type of machine to run on
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      # Checks out a copy of your repository on the ubuntu-latest machine
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      # Runs the Super-Linter action
-      - name: Run Super-Linter
-        uses: github/super-linter@v3
-        env:
-          DEFAULT_BRANCH: feature_textareatool
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v2
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Build with Maven
+        run: mvn -B package --file JHotDraw/pom.xml
