--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,23 +3,24 @@
 
 name: Java CI with Maven
 
-# Run this workflow every time a new commit pushed to your repository
-
 on:
   push:
-    branches: [ feature_textareatool]
+    branches: [ master ]
   pull_request:
-    branches: [ feature_textareatool]
+    branches: [ master ]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-      - name: Build with Maven
-        run: mvn -B package --file JHotDraw/pom.xml
+    - uses: actions/checkout@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+    - name: Run the Maven verify phase
+      run: mvn -B verify --file pom-ci.xml
