--- a/JHotDraw/.github/workflows/BuildPipeline.yml
+++ b/JHotDraw/.github/workflows/BuildPipeline.yml
@@ -1,8 +1,10 @@
-name: Java CI
+name: Java CI with Maven
 
 on:
   push:
-    branches: [dev/linetool]
+    branches: [ dev/linetool]
+  pull_request:
+    branches: [ dev/linetool]
 
 jobs:
   build:
@@ -10,18 +12,16 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 13
+      - name: Set up JDK 1.8
         uses: actions/setup-java@v1
         with:
-          java-version: 13
-
+          java-version: 1.8
       - name: Cache the Maven packages to speed up build
-        uses: actions/cache@v1
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+          uses: actions/cache@v1
+          with:
+            path: ~/.m2
+            key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+            restore-keys: ${{ runner.os }}-m2
 
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
-
+        run: mvn -B package --file JHotDraw/pom.xml
