--- a/JHotDraw/pom.xml
+++ b/JHotDraw/pom.xml
@@ -34,5 +34,10 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.jhotdraw</groupId>
+            <artifactId>JHotDraw</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>   
  </project>
