--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,5 +18,6 @@ jobs:
           path: ~/.m2
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
+
        - name: Build with Maven
-          run: mvn -B package --file pom.xml
+          run: mvn -B package --file JhotDraw/pom.xml
