--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,4 +20,4 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
 
        - name: Build with Maven
-          run: mvn -B package --file JhotDraw/pom.xml
+          run: mvn -B package --file JHotDraw/pom.xml
