--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,9 +5,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ master ]
+    branches: [ Ellipsetool ]
   pull_request:
-    branches: [ master ]
+    branches: [ Ellipsetool ]
 
 jobs:
   build:
