--- a/JHotDraw/pom.xml
+++ b/JHotDraw/pom.xml
@@ -39,5 +39,16 @@
             <artifactId>JHotDraw</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.1.0</version>
+        </dependency>
     </dependencies>   
  </project>
