--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -12,5 +12,7 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Build with Maven
-        run: mvn -B package --file JHotDraw/pom.xml
+      - name: Compile
+        run: mvn -B clean compile --file JHotDraw/pom.xml
+      - name: Run tests
+        run: mvn -B test --file JHotDraw/pom.xml
