--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,6 +1,10 @@
 name: Java CI
 
-on: [push]
+on:
+  push:
+    branches: [ rectangleTool ]
+  pull_request:
+    branches: [ rectangleTool ]
 
 jobs:
   build:
@@ -21,3 +25,5 @@ jobs:
 
       - name: Build with Maven
         run: mvn -B package --file JHotDraw/pom.xml
+      - name: Run tests
+        run: mvn -B test --file JHotDraw/pom.xml
