--- a/JHotDraw/pom.xml
+++ b/JHotDraw/pom.xml
@@ -50,5 +50,11 @@
             <artifactId>mockito-core</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.tngtech.jgiven</groupId>
+            <artifactId>jgiven-junit</artifactId>
+            <version>1.0.0-RC6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>   
  </project>
