--- a/JHotDraw/pom.xml
+++ b/JHotDraw/pom.xml
@@ -45,5 +45,11 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
-    </dependencies>   
+        <dependency>
+            <groupId>com.tngtech.jgiven</groupId>
+            <artifactId>jgiven-junit</artifactId>
+            <version>1.0.0-RC6</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
  </project>
