--- a/JHotDraw/pom.xml
+++ b/JHotDraw/pom.xml
@@ -34,10 +34,17 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.6</version>
         </dependency>
+               <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
-            <groupId>org.junit</groupId>
-            <artifactId>junit4-engine</artifactId>
-            <version>5.0.0-ALPHA</version>
+            <groupId>com.tngtech.jgiven</groupId>
+            <artifactId>jgiven-junit</artifactId>
+            <version>1.0.0-RC6</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>   
  </project>
