--- a/JHotDraw/pom.xml
+++ b/JHotDraw/pom.xml
@@ -39,5 +39,11 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
         </dependency>
+        <dependency>
+            <groupId>com.tngtech.jgiven</groupId>
+            <artifactId>jgiven-junit</artifactId>
+            <version>1.0.0-RC6</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>   
  </project>
