--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,3 +18,5 @@ jobs:
         java-version: 1.8
     - name: Build with Maven
       run: mvn -B package --file JHotDraw/pom.xml
+    - name: Run tests
+      run: mvn -B test --file JHotDraw/pom.xml
