--- a/JHotDraw/pom.xml
+++ b/JHotDraw/pom.xml
@@ -50,9 +50,13 @@
         <dependency>
             <groupId>com.tngtech.jgiven</groupId>
             <artifactId>jgiven-junit</artifactId>
-            <version>1.0.0-RC6</version>
+            <version>0.18.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.18.1</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>   
  </project>
