--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file JHotDraw/pom.xml
     - name: Run the Maven verify phase
-      run: mvn -B verify --file JHotDraw/pom-ci.xml
+      run: mvn -B verify --file JHotDraw/pom.xml
