--- a/JHotDraw/pom.xml
+++ b/JHotDraw/pom.xml
@@ -54,7 +54,7 @@
         <dependency>
             <groupId>com.tngtech.jgiven</groupId>
             <artifactId>jgiven-junit</artifactId>
-            <version>0.18.2</version>
+            <version>1.0.0-RC6</version>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
