--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,3 +21,4 @@ jobs:
             ${{ runner.os }}-maven-
       - name: Build with Maven
         run: mvn -B verify --file JHotDraw/pom.xml
+        working-directory: ./JHotDraw
