--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,5 +20,5 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
       - name: Build with Maven
-        run: mvn -B verify --file JHotDraw/pom.xml
+        run: mvn -B verify --file pom.xml
         working-directory: ./JHotDraw
