--- a/JHotDraw/pom.xml
+++ b/JHotDraw/pom.xml
@@ -34,5 +34,18 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.8.6</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.3.3</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
     </dependencies>   
- </project>
+</project>
