--- a/JHotDraw/pom.xml
+++ b/JHotDraw/pom.xml
@@ -52,6 +52,12 @@
             <version>1.0.0-RC6</version>
         </dependency>
         <dependency>
+            <groupId>pl.pragmatists</groupId>
+            <artifactId>JUnitParams</artifactId>
+            <version>1.1.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
             <version>3.18.1</version>
